--- a/sites/index.html
+++ b/sites/index.html
@@ -1,1 +1,16 @@
-# coursera-test
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<meta charset="utf-8">
+		<title>ejercicio muestra</title>
+		<link rel="stylesheet" href="ejerciciomuestra.css">
+		<title>Hello Coursera!</title>
+	</head>
+
+
+	<body>
+		<h1>Hello Coursera!</h1>
+	</body>
+
+	</html>
